--- a/components/Tile.module.scss
+++ b/components/Tile.module.scss
@@ -17,9 +17,11 @@
   width: 16px;
   height: 16px;
 
+  padding: 4px;
+
   position: absolute;
   right: 0px;
   bottom: 0px;
 
-  font-size: 8px;
+  font-size: 16px;
 }
