--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,7 +1,9 @@
-body {
+.container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 16px;
 
   width: 100vw;
   height: 100vh;
