--- a/components/Tile.module.scss
+++ b/components/Tile.module.scss
@@ -1,35 +1,79 @@
 .tile {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 128px;
-  height: 128px;
-  font-size: 80px;
-
   position: relative;
+  width: 64px;
+  height: 64px;
+
+  font-family: Lilita One, Impact, display;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 46px;
 
   user-select: none;
   cursor: pointer;
 }
 
-.tileScore {
+.tileTextContainer {
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
-  width: 16px;
-  height: 16px;
-
-  padding: 4px;
+  align-items: center;
+  padding: 0;
+  gap: 10px;
+  isolation: isolate;
 
   position: absolute;
-  right: 0px;
-  bottom: 0px;
-
-  font-size: 16px;
+  width: 64px;
+  height: 64px;
+  left: 0;
+  top: 0;
+  z-index: 1;
 }
 
-.tileSelected {
-  @extend .tile;
+.tileScoreContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
 
-  background-color: yellow;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  right: 0;
+  bottom: 0;
+
+  font-size: 12px;
+  line-height: 14px;
+
+  p {
+    width: 5px;
+    height: 8px;
+  }
+}
+
+.tileShapeContainer {
+  position: absolute;
+  width: 64px;
+  height: 64px;
+  left: 0;
+  top: 0;
+  z-index: 0;
+}
+
+.squircle {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.ellipse {
+  position: absolute;
+  top: 44px;
+  left: 44px;
+  height: 20px;
+  width: 20px;
+  padding: 0;
 }
