--- a/components/Tile.module.scss
+++ b/components/Tile.module.scss
@@ -1,3 +1,6 @@
+$primary: #FFBA08;
+$secondary: white;
+
 .tile {
   position: relative;
   width: 64px;
@@ -11,6 +14,9 @@
 
   user-select: none;
   cursor: pointer;
+
+  color: $primary;
+  fill: $secondary;
 }
 
 .tileTextContainer {
