--- a/components/Game.module.scss
+++ b/components/Game.module.scss
@@ -1,3 +1,4 @@
+@import 'vars';
 
 .container {
   width: 100vw;
@@ -9,4 +10,22 @@
   align-items: center;
   padding: 0px;
   gap: 32px; 
+}
+
+.board {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 16px;
+
+  position: relative;
+
+  background: $wibble-secondary;
+  border-radius: 16px;
+
+  .boardRow {
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+  }
 }
