--- a/components/Game.module.scss
+++ b/components/Game.module.scss
@@ -12,6 +12,29 @@
   gap: 32px; 
 }
 
+.word {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 32px;
+  gap: 10px;
+
+  width: 257px;
+  height: 57px;
+
+  color: $wibble-white;
+  background: $wibble-primary;
+
+  border-radius: 32px;
+
+  font-family: 'Lilita One';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 1;
+}
+
 .board {
   display: flex;
   flex-direction: column;
