--- a/components/Game.module.scss
+++ b/components/Game.module.scss
@@ -52,3 +52,38 @@
     gap: 16px;
   }
 }
+
+.scoreContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+
+  width: 378px;
+  height: 82px;
+
+  .scoreTitle {
+    font-family: 'Lilita One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+    text-align: center;
+
+    color: $wibble-primary;
+  }
+
+  .scoreValue {
+    font-family: 'Lilita One';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 64px;
+    line-height: 64px;
+
+    text-align: center;
+    letter-spacing: 0.02em;
+    font-feature-settings: 'tnum' on, 'lnum' on, 'kern' off;
+
+    color: $wibble-primary;
+  }
+}
