feat: implemented selected tile style
BREAKING! Adding this style inexplicably broke selecting tiles...

--- a/components/Tile.module.scss
+++ b/components/Tile.module.scss
@@ -87,6 +87,12 @@
   );
 }
 
+.tileSelected {
+  @extend .tile;
+  color: $wibble-white;
+  fill: $wibble-primary;
+}
+
 .titleTile {
   @include tile(
     $width: 128px,
